docs/v0.6.0/_sources/gallery/extra/lens.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/extra/lens.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_extra_lens.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_extra_lens.py:


Lens focusing
=============

Observe propagation through one dielectric lens. The animation is the single
result of this example.

.. GENERATED FROM PYTHON SOURCE LINES 10-11

Importing the necessary packages

.. GENERATED FROM PYTHON SOURCE LINES 11-17

.. code-block:: Python

    from TypedUnit import ureg
    from MPSPlots import colormaps

    from LightWave2D.grid import Grid
    from LightWave2D.experiment import Experiment








.. GENERATED FROM PYTHON SOURCE LINES 18-19

Define the simulation grid

.. GENERATED FROM PYTHON SOURCE LINES 19-30

.. code-block:: Python

    grid = Grid(
        resolution=0.1 * ureg.micrometer,  # Grid resolution in meters
        size_x=60 * ureg.micrometer,  # Grid size in the x direction in meters
        size_y=30 * ureg.micrometer,  # Grid size in the y direction in meters
        n_steps=100,  # Number of time steps for the simulation
    )

    # Initialize the experiment with the defined grid
    experiment = Experiment(grid=grid)









.. GENERATED FROM PYTHON SOURCE LINES 31-32

Add a lens scatterer to the experiment

.. GENERATED FROM PYTHON SOURCE LINES 32-39

.. code-block:: Python

    scatterer = experiment.add_lens(
        position=("35%", "50%"),  # Center position of the lens
        epsilon_r=2,  # Relative permittivity of the lens
        curvature=10 * ureg.micrometer,  # Curvature of the lens in meters
        width=5 * ureg.micrometer,  # Width of the lens in meters
    )








.. GENERATED FROM PYTHON SOURCE LINES 40-41

Add a point source to the experiment

.. GENERATED FROM PYTHON SOURCE LINES 41-47

.. code-block:: Python

    source = experiment.add_point_source(
        wavelength=1550 * ureg.nanometer,  # Wavelength of the source in meters
        position=("10%", "50%"),  # Position of the source
        amplitude=10,  # Amplitude of the source
    )








.. GENERATED FROM PYTHON SOURCE LINES 48-49

Add a perfectly matched layer (PML) to absorb boundary reflections

.. GENERATED FROM PYTHON SOURCE LINES 49-59

.. code-block:: Python

    experiment.add_pml(
        order=1,  # Order of the PML polynomial profile
        width="10%",  # Width of the PML region as a percentage of grid size
        sigma_max=500 * (ureg.siemens / ureg.meter),  # Maximum conductivity for the PML
    )


    # Run the FDTD simulation
    experiment.run()








.. GENERATED FROM PYTHON SOURCE LINES 60-61

Animate lens focusing.

.. GENERATED FROM PYTHON SOURCE LINES 61-68

.. code-block:: Python

    animation = experiment.render_propagation(
        skip_frame=5,  # Number of frames to skip in the animation
        colormap=colormaps.polytechnique.red_black_blue,  # Colormap for the animation
        enhance_contrast=4,  # Enhance contrast for better visualization
        save_as="./lens.gif",  # Save the animation as a GIF file
        fps=30,
    )



.. image-sg:: /gallery/extra/images/sphx_glr_lens_001.png
   :alt: lens
   :srcset: /gallery/extra/images/sphx_glr_lens_001.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 34.557 seconds)


.. _sphx_glr_download_gallery_extra_lens.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: lens.ipynb <lens.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: lens.py <lens.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: lens.zip <lens.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
